# mcp-compose

./: pyproject.toml
.github/workflows/: build.yml  test.yml
docs/docs/operations/: index.mdx
examples/anaconda-token/: agent.py
examples/proxy-stdio/: Makefile
examples/proxy-streamable-http/: Makefile  README.md  agent.py  mcp_compose.toml
mcp_compose/: __init__.py  __version__.py  auth.py  auth_jwt.py  auth_middleware.py  auth_oauth2.py  authz.py  cli.py  composer.py  config.py  config_loader.py  discovery.py  exceptions.py  http_client.py  metrics.py  oauth_client.py  otel.py  process.py  process_manager.py  tool_authz.py  tool_manager.py  tool_proxy.py
mcp_compose/api/: app.py  dependencies.py  middleware.py  models.py
mcp_compose/api/routes/: auth.py  config.py  health.py  oauth.py  servers.py  settings.py  status.py  tools.py  translators.py  version.py
mcp_compose/providers/: auth_anaconda.py
mcp_compose/proxy/: __init__.py  translator.py
mcp_compose/transport/: __init__.py  base.py  http_stream.py  sse_server.py  stdio.py
references/oauth/mcp_oauth_example/: client.py
tests/: test_api_app.py  test_api_servers.py  test_api_settings.py  test_auth.py  test_auth_anaconda.py  test_auth_jwt.py  test_auth_middleware.py  test_auth_oauth2.py  test_authz.py  test_cli.py  test_composer.py  test_composer_integration.py  test_config.py  test_config_anaconda_auth.py  test_discovery.py  test_http_transport.py  test_process_manager.py  test_shutdown.py  test_sse_transport.py  test_stdio_transport.py  test_tool_authz.py  test_tool_manager.py  test_tool_proxy_array_args.py  test_translator.py
