# Copyright (c) 2023-2024 Datalayer, Inc.
#
# BSD 3-Clause License

[build-system]
requires = ["hatchling~=1.21"]
build-backend = "hatchling.build"

[project]
name = "mcp_compose"
authors = [{ name = "Datalayer", email = "info@datalayer.ai" }]
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["MCP", "Model Context Protocol", "Server", "Composition"]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
    "cryptography>=41.0.0",
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
    "importlib-metadata>=4.8.0",
    "mcp[cli]>=1.2.1",
    "prometheus_client",
    "psutil>=5.9.0",
    "PyJWT>=2.8.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=1.8.0",
    "sse_starlette",
    "toml>=0.10.2",
    "tomli>=2.0.0; python_version < '3.11'",
    "typing-extensions>=4.0.0",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-asyncio>=0.21.0", "pytest-cov>=4.0.0"]
lint = ["ruff~=0.15.0", "mypy>=1.0.0"]
dev = ["pre-commit>=3.0.0"]
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
]

[project.license]
file = "LICENSE"

[project.urls]
Home = "https://github.com/datalayer/mcp-compose"
Documentation = "https://github.com/datalayer/mcp-compose"
Repository = "https://github.com/datalayer/mcp-compose"
Issues = "https://github.com/datalayer/mcp-compose/issues"

[project.scripts]
mcp-compose = "mcp_compose.cli:main"

[tool.hatch.version]
path = "mcp_compose/__version__.py"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["mcp_compose"]

[tool.hatch.build.targets.wheel.force-include]
"ui/dist" = "mcp_compose/ui/dist"

[tool.hatch.build.targets.sdist]
include = [
    "mcp_compose",
    "ui",
    "tests",
    "README.md",
    "LICENSE",
    "hatch_build.py",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "E722",  # bare except (TODO: fix across codebase)
    "B007",  # loop control variable not used (TODO: fix across codebase)
    "B008",  # do not perform function calls in argument defaults
    "B017",  # do not assert blind exception (TODO: fix across codebase)
    "B023",  # function does not bind loop variable (TODO: fix across codebase)
    "B904",  # raise from within except (TODO: fix across codebase)
    "C901",  # too complex
    "F841",  # local variable assigned but unused (TODO: fix across codebase)
    "UP045", # use X | Y for union types (TODO: fix across codebase)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
# Pre-existing issues in these files (TODO: fix in dedicated cleanup PR)
"mcp_compose/api/routes/health.py" = ["F821"]
"mcp_compose/otel.py" = ["F401", "F821"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=mcp_compose",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
